welcome.lessons.welcome.array.has271.Has271.scala.error
has271:22: error: value =< is not a member of Int
  return ((a+5==b) && (Math.abs(a-1-c) =< 2))
                                       ^